# wagtail-parler

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS  CHANGELOG  LICENSE  MANIFEST.in  README.md  django-admin.sh  pyproject.toml  runtests.py  setup.cfg  tbump.toml  test.sqlite  test_fixtures.json  tox.ini
.github/workflows/: build_n_publish.yml  main.yml  qa.yml  qa.yml.back
docs/: requirements.txt
docs/source/: api.md  conf.py  configuration.md  index.md  usage.md
wagtail_modeladmin_parler/: forms.py  handlers.py
wagtail_parler/: __init__.py  apps.py  compat.py  forms.py  handlers.py  models.py  settings.py  wagtail_hooks.py
wagtail_parler/admin/: columns.py
wagtail_parler/static/wagtail_parler/js/: admin.js
wagtail_parler/templates/wagtail_parler/tables/: languages_cell.html
wagtail_parler_tests/: apps.py  models.py  settings.py  tests.py  urls.py  views.py  wagtail_hooks.py
wagtail_parler_tests/migrations/: 0001_initial.py  0002_auto_20230907_1910.py  0002_food_yum_rating.py  0003_auto_20230801_1747.py  0003_food_latest_revision_and_more.py  0004_food2_food2translation.py  0004_ingredient_foodwithinlinepanel_and_more.py  0005_auto_20230801_1909.py  0006_foodwithedithandler_foodwithedithandlertranslation.py  0007_foodwithspecificedithandler_foodwithspecificedithandlertranslation.py
wagtail_parler_tests/templates/wagtail_parler_tests/: base.html  food_list.html  food_preview.html
wagtail_parler_tests/templates/wagtail_parler_tests/inc/: available_translations.html
wagtail_parler_tests/templates/wmp_tests/inc/: available_translations.html
wmp_tests/: apps.py  models.py  settings.py  tests.py  wagtail_hooks.py
wmp_tests/migrations/: 0001_initial.py  0002_food_yum_rating.py  0003_auto_20230801_1747.py  0004_food2_food2translation.py  0005_auto_20230801_1909.py  0006_foodwithedithandler_foodwithedithandlertranslation.py  0007_foodwithspecificedithandler_foodwithspecificedithandlertranslation.py
wmp_tests/templates/wmp_tests/: food_detail.html  food_list.html
