[metadata]
name = wagtail_parler
version = attr: wagtail_parler.__version__
url = https://github.com/webu/wagtail-parler
author = Webu
author_email = contact@webu.coop
description = Brings "omelette du fromage" ðŸ§€ from parler into wagtail ðŸ¦ (via wagtail snippets or modeladmin)
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/webu/wagtail-parler
    Tracker = https://github.com/webu/wagtail-parler/issues

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django>=3.2
    wagtail>=5.0.2
    django-parler>=2.3

[options.extras_require]
testing =
    requests
    beautifulsoup4
    coverage>=3.7.0
    black
    flake8
    mypy
    types-requests

[flake8]
exclude = build,.git,.tox,./wagtail_parler_tests/.env,venv
max-line-length = 99

[black]
line-length = 99
include = \.pyi?$
exclude = \.git
    | python-env
    | migrations
    | \.tox
    | \.venv
    | build
    | dist

[isort]
profile="black"
line_length = 99
known_django = ["django"]
known_pylib = ["dateutil"]
known_third_party = ["parler", "wagtail"]
known_first_party = ["wagtail_parler"]
indent = '    '
multi_line_output = 3
length_sort = false
force_single_line = true
default_section = "THIRDPARTY"
sections  = ["FUTURE", "STDLIB", "PYLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
combine_as_imports = true
import_heading_future = "Future imports"
import_heading_stdlib = "Standard libs"
import_heading_pylib = "Python libs"
import_heading_django = "Django imports"
import_heading_thirdparty = "Third Party"
import_heading_firstparty = "wagtail / parler"
import_heading_localfolder = "Local Apps"
force_sort_within_sections=true

[mypy]
ignore_missing_imports = True
warn_unused_configs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
no_implicit_reexport = True
strict_equality = True

[djlint]
profile = "django"
preserve_blank_lines = true
format_js = false
format_css = true

[pyright]
exclude = ["python-env"]
venvPath = "."
venv = "./python-env"
